pkg = gnomedesktop
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = gnomedesktop-sharp-2.20.pc
pkgversion = 2.20

API_VERSION = 2.20.0.0
INCLUDE_API =
METADATA = metadata
references =

sources =

customs =

add_dist = gnomedesktop-sharp-2.20.pc.in gnomedesktop-sharp.dll.config.in

include ../Makefile.include

