pkg = gnomedesktop
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = gnome-desktop-sharp-2.0.pc
pkgversion = 2.20

API_VERSION = 2.20.0.0
INCLUDE_API =
METADATA = metadata
references =

sources =

customs =

add_dist = gnome-desktop-sharp-2.0.pc.in gnomedesktop-sharp.dll.config.in

include ../Makefile.include

